@@ -1,6 +1,7 @@
 version 0.9.5+
 	* Faster decoding
 	* Add jug-execute script
+	* Add describe() function
 
 version 0.9.5 Mon May 27 2013 by luispedro
 	* Added debug mode
